adding int tests code